--- a/sections/exp_3/exp_3.html
+++ b/sections/exp_3/exp_3.html
@@ -45,19 +45,19 @@
   }
 
   /* 第一列：2张图片各占50%高度，文本卡片放在第一张图片内部下方 */
-  .exp-3-column:nth-child(1) .exp-3-card:nth-child(1) {
+  .exp-3-column:nth-child(5n + 1) .exp-3-card:nth-child(1) {
     flex: 0 0 50%;
     min-height: 0;
     position: relative;
   }
 
-  .exp-3-column:nth-child(1) .exp-3-card:nth-child(2) {
+  .exp-3-column:nth-child(5n + 1) .exp-3-card:nth-child(2) {
     flex: 0 0 50%;
     min-height: 0;
   }
 
   /* 文本卡片放在第一张图片内部下方 */
-  .exp-3-column:nth-child(1) .exp-3-card-text {
+  .exp-3-column:nth-child(5n + 1) .exp-3-card-text {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -70,65 +70,65 @@
   }
 
   /* 第二列：3张图片，分别占30%、30%、40% */
-  .exp-3-column:nth-child(2) .exp-3-card:nth-child(1) {
+  .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(1) {
     flex: 0 0 30%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(2) .exp-3-card:nth-child(2) {
+  .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(2) {
     flex: 0 0 30%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(2) .exp-3-card:nth-child(3) {
+  .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(3) {
     flex: 0 0 40%;
     min-height: 0;
   }
 
   /* 第三列：3张图片，分别占20%、30%、50% */
-  .exp-3-column:nth-child(3) .exp-3-card:nth-child(1) {
+  .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(1) {
     flex: 0 0 20%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(3) .exp-3-card:nth-child(2) {
+  .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(2) {
     flex: 0 0 30%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(3) .exp-3-card:nth-child(3) {
+  .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(3) {
     flex: 0 0 50%;
     min-height: 0;
   }
 
   /* 第四列：3张图片，分别占50%、20%、30% */
-  .exp-3-column:nth-child(4) .exp-3-card:nth-child(1) {
+  .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(1) {
     flex: 0 0 50%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(4) .exp-3-card:nth-child(2) {
+  .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(2) {
     flex: 0 0 20%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(4) .exp-3-card:nth-child(3) {
+  .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(3) {
     flex: 0 0 30%;
     min-height: 0;
   }
 
   /* 第五列：3张图片，分别占20%、30%、50% */
-  .exp-3-column:nth-child(5) .exp-3-card:nth-child(1) {
+  .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(1) {
     flex: 0 0 20%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(5) .exp-3-card:nth-child(2) {
+  .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(2) {
     flex: 0 0 30%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(5) .exp-3-card:nth-child(3) {
+  .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(3) {
     flex: 0 0 50%;
     min-height: 0;
   }
@@ -224,26 +224,18 @@
     opacity: 0;
     max-height: 0;
     overflow: hidden;
-    transition: opacity 0.6s ease-in-out, max-height 0.6s ease-in-out, margin 0.6s ease-in-out;
+    transition: all 0.6s ease-in-out;
     margin-top: 0;
     margin-bottom: 0;
-    height: auto;
-  }
-
-  .exp-3-extra-images .exp-3-column {
-    height: auto;
-  }
-
-  .exp-3-extra-images .exp-3-card {
-    flex: 0 0 auto;
   }
 
   .exp-3-extra-images.show {
     opacity: 1;
-    max-height: 9999px;
+    max-height: 1200px;
     margin-top: var(--spacing-2xl);
     margin-bottom: var(--spacing-2xl);
     overflow: visible;
+    /* 展开后保持与主布局一致且不裁剪视频 */
   }
 
   /* 视频预览模态框 */
@@ -320,63 +312,63 @@
 
     /* 平板：2列布局，保持原有的图片比例 */
     /* 第一列：2张图片各占50% */
-    .exp-3-column:nth-child(1) .exp-3-card:nth-child(1) {
+    .exp-3-column:nth-child(5n + 1) .exp-3-card:nth-child(1) {
       flex: 0 0 50%;
     }
 
-    .exp-3-column:nth-child(1) .exp-3-card:nth-child(2) {
-      flex: 0 0 50%;
+    .exp-3-column:nth-child(5n + 1) .exp-3-card:nth-child(2) {
+      flex: 0 0 55%;
     }
 
     /* 第二列：3张图片，分别占30%、30%、40% */
-    .exp-3-column:nth-child(2) .exp-3-card:nth-child(1) {
+    .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(1) {
       flex: 0 0 30%;
     }
 
-    .exp-3-column:nth-child(2) .exp-3-card:nth-child(2) {
+    .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(2) {
       flex: 0 0 30%;
     }
 
-    .exp-3-column:nth-child(2) .exp-3-card:nth-child(3) {
+    .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(3) {
       flex: 0 0 40%;
     }
 
     /* 第三列：3张图片，分别占20%、30%、50% */
-    .exp-3-column:nth-child(3) .exp-3-card:nth-child(1) {
+    .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(1) {
       flex: 0 0 20%;
     }
 
-    .exp-3-column:nth-child(3) .exp-3-card:nth-child(2) {
+    .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(2) {
       flex: 0 0 30%;
     }
 
-    .exp-3-column:nth-child(3) .exp-3-card:nth-child(3) {
+    .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(3) {
       flex: 0 0 50%;
     }
 
     /* 第四列：3张图片，分别占50%、20%、30% */
-    .exp-3-column:nth-child(4) .exp-3-card:nth-child(1) {
+    .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(1) {
       flex: 0 0 50%;
     }
 
-    .exp-3-column:nth-child(4) .exp-3-card:nth-child(2) {
+    .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(2) {
       flex: 0 0 20%;
     }
 
-    .exp-3-column:nth-child(4) .exp-3-card:nth-child(3) {
+    .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(3) {
       flex: 0 0 30%;
     }
 
     /* 第五列：3张图片，分别占20%、30%、50% */
-    .exp-3-column:nth-child(5) .exp-3-card:nth-child(1) {
+    .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(1) {
       flex: 0 0 20%;
     }
 
-    .exp-3-column:nth-child(5) .exp-3-card:nth-child(2) {
+    .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(2) {
       flex: 0 0 30%;
     }
 
-    .exp-3-column:nth-child(5) .exp-3-card:nth-child(3) {
+    .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(3) {
       flex: 0 0 50%;
     }
   }
@@ -399,26 +391,26 @@
     }
 
     /* 手机：单列布局，所有图片统一高度 */
-    .exp-3-column:nth-child(1) .exp-3-card:nth-child(1),
-    .exp-3-column:nth-child(1) .exp-3-card:nth-child(2),
-    .exp-3-column:nth-child(2) .exp-3-card:nth-child(1),
-    .exp-3-column:nth-child(2) .exp-3-card:nth-child(2),
-    .exp-3-column:nth-child(2) .exp-3-card:nth-child(3),
-    .exp-3-column:nth-child(3) .exp-3-card:nth-child(1),
-    .exp-3-column:nth-child(3) .exp-3-card:nth-child(2),
-    .exp-3-column:nth-child(3) .exp-3-card:nth-child(3),
-    .exp-3-column:nth-child(4) .exp-3-card:nth-child(1),
-    .exp-3-column:nth-child(4) .exp-3-card:nth-child(2),
-    .exp-3-column:nth-child(4) .exp-3-card:nth-child(3),
-    .exp-3-column:nth-child(5) .exp-3-card:nth-child(1),
-    .exp-3-column:nth-child(5) .exp-3-card:nth-child(2),
-    .exp-3-column:nth-child(5) .exp-3-card:nth-child(3) {
+    .exp-3-column:nth-child(5n + 1) .exp-3-card:nth-child(1),
+    .exp-3-column:nth-child(5n + 1) .exp-3-card:nth-child(2),
+    .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(1),
+    .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(2),
+    .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(3),
+    .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(1),
+    .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(2),
+    .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(3),
+    .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(1),
+    .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(2),
+    .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(3),
+    .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(1),
+    .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(2),
+    .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(3) {
       flex: 1;
       min-height: 200px;
     }
 
     /* 文本卡片在手机上调整 */
-    .exp-3-column:nth-child(1) .exp-3-card-text {
+    .exp-3-column:nth-child(5n + 1) .exp-3-card-text {
       position: absolute;
       bottom: 0;
       left: 0;
@@ -463,16 +455,6 @@
             <source src="assets/exp_3/videos/exp_3-video-01.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
-          <div class="exp-3-card exp-3-card-text">
-            <p class="exp-3-card-text-content">
-              a cinematic 8k video of a lone astronaut walking slowly across the surface of the moon under deep space
-              darkness. the camera circles gently, capturing the texture of the dusty lunar ground and the intricate
-              folds of the astronaut's suit.
-            </p>
-            <svg class="exp-3-card-text-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M7 17L17 7M7 7h10v10" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-          </div>
         </div>
         <div class="exp-3-card">
           <video class="exp-3-card-image" muted loop playsinline>
@@ -669,6 +651,12 @@
             Your browser does not support the video tag.
           </video>
         </div>
+        <div class="exp-3-card">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="assets/exp_3/videos/exp_3-video-28.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
       </div>
     </div>
 
@@ -730,7 +718,7 @@
       // Load More 按钮功能
       const loadMoreButton = document.querySelector('.exp-3-load-more-button');
       const extraImages = document.querySelector('.exp-3-extra-images');
-      
+
       if (loadMoreButton && extraImages) {
         loadMoreButton.addEventListener('click', function () {
           // 显示额外的图片
@@ -742,9 +730,9 @@
             extraImages.classList.add('show');
             // 平滑滚动到新加载的内容
             setTimeout(() => {
-              extraImages.scrollIntoView({ 
-                behavior: 'smooth', 
-                block: 'start' 
+              extraImages.scrollIntoView({
+                behavior: 'smooth',
+                block: 'start'
               });
             }, 100);
             // 更新按钮文本
@@ -756,9 +744,9 @@
             setTimeout(() => {
               extraImages.style.display = 'none';
               // 滚动回原始内容
-              document.querySelector('.exp-3-columns:not(.exp-3-extra-images)').scrollIntoView({ 
-                behavior: 'smooth', 
-                block: 'start' 
+              document.querySelector('.exp-3-columns:not(.exp-3-extra-images)').scrollIntoView({
+                behavior: 'smooth',
+                block: 'start'
               });
             }, 600);
             // 恢复按钮文本
