--- a/explore.html
+++ b/explore.html
@@ -445,7 +445,7 @@
   position: relative;
   background: rgba(128, 128, 128, 0.15); /* 灰色半透明背景 */
   border: 1px solid rgba(128, 128, 128, 0.25);
-  border-radius: 6px;
+  border-radius: 999px; /* 始终保持圆角胶囊形状 */
   color: var(--color-text);
   font-weight: 500;
   /* 移除 backdrop-filter，避免与导航栏的 backdrop-filter 冲突 */
@@ -476,6 +476,7 @@
   z-index: -1;
   transition: opacity 0.3s ease; /* 明确指定过渡属性 */
   will-change: opacity; /* 提示浏览器优化此属性 */
+  border-radius: inherit;
   /* 使用 GPU 加速，创建独立渲染层 */
   transform: translate3d(0, 0, 0);
   -webkit-transform: translate3d(0, 0, 0);
@@ -647,10 +648,15 @@
   font-weight: 600;
   text-align: center;
   align-self: flex-start;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+  will-change: transform;
 }
 
 .dropdown-cta:hover {
   color: #FFFFFF !important;
+  background: #3A3A3A;
+  transform: translateY(-2px) scale(1.02);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.35);
 }
 
 /* 右侧横向图片 */
@@ -722,11 +728,14 @@
 .solutions-cards .dropdown-card {
   width: 135px;
   height: 190px;
+  transition: transform 0.4s ease, box-shadow 0.4s ease, filter 0.4s ease;
+  will-change: transform;
 }
 
-/* Solutions 卡片不显示副文字 */
-.solutions-cards .card-overlay p {
-  display: none;
+.solutions-cards .dropdown-card:hover {
+  transform: translateY(-8px) scale(1.04);
+  box-shadow: 0 18px 40px rgba(0, 0, 0, 0.4);
+  filter: brightness(1.08);
 }
 
 /* ===== Pricing 下拉面板专属样式 ===== */
@@ -766,11 +775,28 @@
   border-radius: 6px;
   overflow: hidden;
   cursor: pointer;
-  transition: transform 0.3s ease;
+  transition: transform 0.35s ease, box-shadow 0.35s ease, filter 0.35s ease, opacity 0.35s ease;
+  will-change: transform, filter;
+}
+
+.dropdown-card::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+  opacity: 0;
+  transition: opacity 0.35s ease;
+  pointer-events: none;
 }
 
 .dropdown-card:hover {
-  transform: translateY(-4px);
+  transform: translateY(-4px) scale(1.02);
+  box-shadow: 0 12px 28px rgba(0, 0, 0, 0.35);
+  filter: brightness(1.04);
+}
+
+.dropdown-card:hover::after {
+  opacity: 1;
 }
 
 .dropdown-card img {
@@ -1232,7 +1258,7 @@
   /* 顶部标题区域 - 居中 */
   .exp-1-header {
     text-align: center;
-    margin-bottom: var(--spacing-3xl);
+    margin-bottom: 1.3rem;
   }
 
   .exp-1-title {
@@ -1246,15 +1272,14 @@
   }
 
   .exp-1-subtitle {
-    color: var(--color-text);
     font-family: 'Sora', sans-serif;
-    font-size: 1rem;
+    font-size: clamp(1rem, 1.8vw, 0.75rem);
+    color: #a5a5a5;
+    line-height: 1.8;
+    max-width: 60%;
+    margin: 0 auto;
+    text-align: center;
     font-weight: 300;
-    line-height: 1.6;
-    margin: 0;
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
   }
 
   /* 列布局 */
@@ -1264,6 +1289,9 @@
     width: 100%;
     align-items: stretch;
     min-height: 600px;
+    justify-content: center;
+    max-width: 98%;
+    margin: 0 auto;
   }
 
   .exp-1-column {
@@ -1276,7 +1304,7 @@
   /* 第一列：25% */
   .exp-1-column-left {
     width: 25%;
-    flex-shrink: 0;
+    flex: 0 0 25%;
     height: 100%;
   }
 
@@ -1294,7 +1322,7 @@
   /* 第二列：40% */
   .exp-1-column-center {
     width: 40%;
-    flex-shrink: 0;
+    flex: 0 0 40%;
     height: 100%;
     gap: 0;
   }
@@ -1302,7 +1330,7 @@
   /* 第三列：25% */
   .exp-1-column-right {
     width: 25%;
-    flex-shrink: 0;
+    flex: 0 0 25%;
     height: 100%;
   }
 
@@ -1897,19 +1925,19 @@
   }
 
   /* 第一列：2张图片各占50%高度，文本卡片放在第一张图片内部下方 */
-  .exp-3-column:nth-child(1) .exp-3-card:nth-child(1) {
+  .exp-3-column:nth-child(5n + 1) .exp-3-card:nth-child(1) {
     flex: 0 0 50%;
     min-height: 0;
     position: relative;
   }
 
-  .exp-3-column:nth-child(1) .exp-3-card:nth-child(2) {
+  .exp-3-column:nth-child(5n + 1) .exp-3-card:nth-child(2) {
     flex: 0 0 50%;
     min-height: 0;
   }
 
   /* 文本卡片放在第一张图片内部下方 */
-  .exp-3-column:nth-child(1) .exp-3-card-text {
+  .exp-3-column:nth-child(5n + 1) .exp-3-card-text {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -1922,65 +1950,65 @@
   }
 
   /* 第二列：3张图片，分别占30%、30%、40% */
-  .exp-3-column:nth-child(2) .exp-3-card:nth-child(1) {
+  .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(1) {
     flex: 0 0 30%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(2) .exp-3-card:nth-child(2) {
+  .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(2) {
     flex: 0 0 30%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(2) .exp-3-card:nth-child(3) {
+  .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(3) {
     flex: 0 0 40%;
     min-height: 0;
   }
 
   /* 第三列：3张图片，分别占20%、30%、50% */
-  .exp-3-column:nth-child(3) .exp-3-card:nth-child(1) {
+  .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(1) {
     flex: 0 0 20%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(3) .exp-3-card:nth-child(2) {
+  .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(2) {
     flex: 0 0 30%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(3) .exp-3-card:nth-child(3) {
+  .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(3) {
     flex: 0 0 50%;
     min-height: 0;
   }
 
   /* 第四列：3张图片，分别占50%、20%、30% */
-  .exp-3-column:nth-child(4) .exp-3-card:nth-child(1) {
+  .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(1) {
     flex: 0 0 50%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(4) .exp-3-card:nth-child(2) {
+  .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(2) {
     flex: 0 0 20%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(4) .exp-3-card:nth-child(3) {
+  .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(3) {
     flex: 0 0 30%;
     min-height: 0;
   }
 
   /* 第五列：3张图片，分别占20%、30%、50% */
-  .exp-3-column:nth-child(5) .exp-3-card:nth-child(1) {
+  .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(1) {
     flex: 0 0 20%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(5) .exp-3-card:nth-child(2) {
+  .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(2) {
     flex: 0 0 30%;
     min-height: 0;
   }
 
-  .exp-3-column:nth-child(5) .exp-3-card:nth-child(3) {
+  .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(3) {
     flex: 0 0 50%;
     min-height: 0;
   }
@@ -2083,9 +2111,11 @@
 
   .exp-3-extra-images.show {
     opacity: 1;
-    max-height: 1000px;
+    max-height: 1200px;
     margin-top: var(--spacing-2xl);
     margin-bottom: var(--spacing-2xl);
+    overflow: visible;
+    /* 展开后保持与主布局一致且不裁剪视频 */
   }
 
   /* 视频预览模态框 */
@@ -2162,63 +2192,63 @@
 
     /* 平板：2列布局，保持原有的图片比例 */
     /* 第一列：2张图片各占50% */
-    .exp-3-column:nth-child(1) .exp-3-card:nth-child(1) {
+    .exp-3-column:nth-child(5n + 1) .exp-3-card:nth-child(1) {
       flex: 0 0 50%;
     }
 
-    .exp-3-column:nth-child(1) .exp-3-card:nth-child(2) {
-      flex: 0 0 50%;
+    .exp-3-column:nth-child(5n + 1) .exp-3-card:nth-child(2) {
+      flex: 0 0 55%;
     }
 
     /* 第二列：3张图片，分别占30%、30%、40% */
-    .exp-3-column:nth-child(2) .exp-3-card:nth-child(1) {
+    .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(1) {
       flex: 0 0 30%;
     }
 
-    .exp-3-column:nth-child(2) .exp-3-card:nth-child(2) {
+    .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(2) {
       flex: 0 0 30%;
     }
 
-    .exp-3-column:nth-child(2) .exp-3-card:nth-child(3) {
+    .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(3) {
       flex: 0 0 40%;
     }
 
     /* 第三列：3张图片，分别占20%、30%、50% */
-    .exp-3-column:nth-child(3) .exp-3-card:nth-child(1) {
+    .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(1) {
       flex: 0 0 20%;
     }
 
-    .exp-3-column:nth-child(3) .exp-3-card:nth-child(2) {
+    .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(2) {
       flex: 0 0 30%;
     }
 
-    .exp-3-column:nth-child(3) .exp-3-card:nth-child(3) {
+    .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(3) {
       flex: 0 0 50%;
     }
 
     /* 第四列：3张图片，分别占50%、20%、30% */
-    .exp-3-column:nth-child(4) .exp-3-card:nth-child(1) {
+    .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(1) {
       flex: 0 0 50%;
     }
 
-    .exp-3-column:nth-child(4) .exp-3-card:nth-child(2) {
+    .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(2) {
       flex: 0 0 20%;
     }
 
-    .exp-3-column:nth-child(4) .exp-3-card:nth-child(3) {
+    .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(3) {
       flex: 0 0 30%;
     }
 
     /* 第五列：3张图片，分别占20%、30%、50% */
-    .exp-3-column:nth-child(5) .exp-3-card:nth-child(1) {
+    .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(1) {
       flex: 0 0 20%;
     }
 
-    .exp-3-column:nth-child(5) .exp-3-card:nth-child(2) {
+    .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(2) {
       flex: 0 0 30%;
     }
 
-    .exp-3-column:nth-child(5) .exp-3-card:nth-child(3) {
+    .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(3) {
       flex: 0 0 50%;
     }
   }
@@ -2241,26 +2271,26 @@
     }
 
     /* 手机：单列布局，所有图片统一高度 */
-    .exp-3-column:nth-child(1) .exp-3-card:nth-child(1),
-    .exp-3-column:nth-child(1) .exp-3-card:nth-child(2),
-    .exp-3-column:nth-child(2) .exp-3-card:nth-child(1),
-    .exp-3-column:nth-child(2) .exp-3-card:nth-child(2),
-    .exp-3-column:nth-child(2) .exp-3-card:nth-child(3),
-    .exp-3-column:nth-child(3) .exp-3-card:nth-child(1),
-    .exp-3-column:nth-child(3) .exp-3-card:nth-child(2),
-    .exp-3-column:nth-child(3) .exp-3-card:nth-child(3),
-    .exp-3-column:nth-child(4) .exp-3-card:nth-child(1),
-    .exp-3-column:nth-child(4) .exp-3-card:nth-child(2),
-    .exp-3-column:nth-child(4) .exp-3-card:nth-child(3),
-    .exp-3-column:nth-child(5) .exp-3-card:nth-child(1),
-    .exp-3-column:nth-child(5) .exp-3-card:nth-child(2),
-    .exp-3-column:nth-child(5) .exp-3-card:nth-child(3) {
+    .exp-3-column:nth-child(5n + 1) .exp-3-card:nth-child(1),
+    .exp-3-column:nth-child(5n + 1) .exp-3-card:nth-child(2),
+    .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(1),
+    .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(2),
+    .exp-3-column:nth-child(5n + 2) .exp-3-card:nth-child(3),
+    .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(1),
+    .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(2),
+    .exp-3-column:nth-child(5n + 3) .exp-3-card:nth-child(3),
+    .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(1),
+    .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(2),
+    .exp-3-column:nth-child(5n + 4) .exp-3-card:nth-child(3),
+    .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(1),
+    .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(2),
+    .exp-3-column:nth-child(5n + 5) .exp-3-card:nth-child(3) {
       flex: 1;
       min-height: 200px;
     }
 
     /* 文本卡片在手机上调整 */
-    .exp-3-column:nth-child(1) .exp-3-card-text {
+    .exp-3-column:nth-child(5n + 1) .exp-3-card-text {
       position: absolute;
       bottom: 0;
       left: 0;
@@ -2305,16 +2335,6 @@
             <source src="assets/exp_3/videos/exp_3-video-01.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
-          <div class="exp-3-card exp-3-card-text">
-            <p class="exp-3-card-text-content">
-              a cinematic 8k video of a lone astronaut walking slowly across the surface of the moon under deep space
-              darkness. the camera circles gently, capturing the texture of the dusty lunar ground and the intricate
-              folds of the astronaut's suit.
-            </p>
-            <svg class="exp-3-card-text-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M7 17L17 7M7 7h10v10" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-          </div>
         </div>
         <div class="exp-3-card">
           <video class="exp-3-card-image" muted loop playsinline>
@@ -2489,16 +2509,16 @@
             Your browser does not support the video tag.
           </video>
         </div>
-      </div>
-
-      <!-- 第十列 -->
-      <div class="exp-3-column">
         <div class="exp-3-card">
           <video class="exp-3-card-image" muted loop playsinline>
             <source src="assets/exp_3/videos/exp_3-video-25.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
+      </div>
+
+      <!-- 第十列 -->
+      <div class="exp-3-column">
         <div class="exp-3-card">
           <video class="exp-3-card-image" muted loop playsinline>
             <source src="assets/exp_3/videos/exp_3-video-26.mp4" type="video/mp4">
@@ -2508,6 +2528,12 @@
         <div class="exp-3-card">
           <video class="exp-3-card-image" muted loop playsinline>
             <source src="assets/exp_3/videos/exp_3-video-27.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+        <div class="exp-3-card">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="assets/exp_3/videos/exp_3-video-28.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -2572,7 +2598,7 @@
       // Load More 按钮功能
       const loadMoreButton = document.querySelector('.exp-3-load-more-button');
       const extraImages = document.querySelector('.exp-3-extra-images');
-      
+
       if (loadMoreButton && extraImages) {
         loadMoreButton.addEventListener('click', function () {
           // 显示额外的图片
@@ -2584,9 +2610,9 @@
             extraImages.classList.add('show');
             // 平滑滚动到新加载的内容
             setTimeout(() => {
-              extraImages.scrollIntoView({ 
-                behavior: 'smooth', 
-                block: 'start' 
+              extraImages.scrollIntoView({
+                behavior: 'smooth',
+                block: 'start'
               });
             }, 100);
             // 更新按钮文本
@@ -2598,9 +2624,9 @@
             setTimeout(() => {
               extraImages.style.display = 'none';
               // 滚动回原始内容
-              document.querySelector('.exp-3-columns:not(.exp-3-extra-images)').scrollIntoView({ 
-                behavior: 'smooth', 
-                block: 'start' 
+              document.querySelector('.exp-3-columns:not(.exp-3-extra-images)').scrollIntoView({
+                behavior: 'smooth',
+                block: 'start'
               });
             }, 600);
             // 恢复按钮文本
@@ -2657,6 +2683,7 @@
     }
   })();
 </script>
+
 
   <!-- ===== FOOTER SECTION ===== -->
 <style>
