--- a/sections/compose/compose.html
+++ b/sections/compose/compose.html
@@ -14,7 +14,7 @@
   .compose-container {
     max-width: 100%;
     margin: 0 auto;
-    padding: var(--spacing-lg) 3rem;
+    padding: 4.5rem 3rem;
     width: 100%;
     position: relative;
     min-height: 100vh;
