--- a/sections/exp_1/exp_1.html
+++ b/sections/exp_1/exp_1.html
@@ -16,7 +16,7 @@
   /* 顶部标题区域 - 居中 */
   .exp-1-header {
     text-align: center;
-    margin-bottom: var(--spacing-3xl);
+    margin-bottom: 1.3rem;
   }
 
   .exp-1-title {
@@ -30,15 +30,14 @@
   }
 
   .exp-1-subtitle {
-    color: var(--color-text);
     font-family: 'Sora', sans-serif;
-    font-size: 1rem;
+    font-size: clamp(1rem, 1.8vw, 0.75rem);
+    color: #a5a5a5;
+    line-height: 1.8;
+    max-width: 60%;
+    margin: 0 auto;
+    text-align: center;
     font-weight: 300;
-    line-height: 1.6;
-    margin: 0;
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
   }
 
   /* 列布局 */
@@ -48,6 +47,9 @@
     width: 100%;
     align-items: stretch;
     min-height: 600px;
+    justify-content: center;
+    max-width: 98%;
+    margin: 0 auto;
   }
 
   .exp-1-column {
@@ -60,7 +62,7 @@
   /* 第一列：25% */
   .exp-1-column-left {
     width: 25%;
-    flex-shrink: 0;
+    flex: 0 0 25%;
     height: 100%;
   }
 
@@ -78,7 +80,7 @@
   /* 第二列：40% */
   .exp-1-column-center {
     width: 40%;
-    flex-shrink: 0;
+    flex: 0 0 40%;
     height: 100%;
     gap: 0;
   }
@@ -86,7 +88,7 @@
   /* 第三列：25% */
   .exp-1-column-right {
     width: 25%;
-    flex-shrink: 0;
+    flex: 0 0 25%;
     height: 100%;
   }
 
